gradient-text [ADDED]

--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
   </head>
   <body>
     <main>
-      <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit</h1>
+      <h1 class="gradient-text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit
+      </h1>
       <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae rem ea
         quis, nihil cumque dignissimos atque ad aliquam temporibus eaque. Soluta
         officiis possimus enim earum nisi officia illum asperiores error?
       </p>
-      <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit</h1>
+      <h1 class="gradient-text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit
+      </h1>
       <h2>Provident quis magnam perferendis quas cumque</h2>
       <img src="imagen.webp" alt="clone wars" />
     </main>
