--- a/index.html
+++ b/index.html
@@ -16,6 +16,34 @@
         quis, nihil cumque dignissimos atque ad aliquam temporibus eaque. Soluta
         officiis possimus enim earum nisi officia illum asperiores error?
       </p>
+      <section class="quotes-section">
+        <div class="wrapper">
+          <div class="quotes">
+            <p>
+              Labore veniam doloremque non quibusdam nihil fugit dolor tenetur
+              optio earum tempore? Enim necessitatibus praesentium iure dolor
+              voluptatum similique delectus aspernatur cum.Sunt impedit eius
+              reprehenderit laborum quos.
+            </p>
+          </div>
+          <div class="quotes">
+            <p>
+              Labore veniam doloremque non quibusdam nihil fugit dolor tenetur
+              optio earum tempore? Enim necessitatibus praesentium iure dolor
+              voluptatum similique delectus aspernatur cum.Sunt impedit eius
+              reprehenderit laborum quos.
+            </p>
+          </div>
+          <div class="quotes">
+            <p>
+              Labore veniam doloremque non quibusdam nihil fugit dolor tenetur
+              optio earum tempore? Enim necessitatibus praesentium iure dolor
+              voluptatum similique delectus aspernatur cum.Sunt impedit eius
+              reprehenderit laborum quos.
+            </p>
+          </div>
+        </div>
+      </section>
       <h1 class="gradient-text">
         Lorem ipsum dolor sit amet consectetur adipisicing elit
       </h1>
