background image in display text [ADDED]

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   </head>
   <body>
     <main>
-      <h1 class="gradient-text">
+      <h1 class="display-text">Display text</h1>
+      <h2 class="gradient-text">
         Lorem ipsum dolor sit amet consectetur adipisicing elit
-      </h1>
+      </h2>
       <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae rem ea
         quis, nihil cumque dignissimos atque ad aliquam temporibus eaque. Soluta
@@ -44,10 +45,10 @@
           </div>
         </div>
       </section>
-      <h1 class="gradient-text">
+      <h2 class="gradient-text">
         Lorem ipsum dolor sit amet consectetur adipisicing elit
-      </h1>
-      <h2>Provident quis magnam perferendis quas cumque</h2>
+      </h2>
+      <h3>Provident quis magnam perferendis quas cumque</h3>
       <img src="imagen.webp" alt="clone wars" />
     </main>
   </body>
